Fix spacing between icons and text inside buttons, improve spacing on annotation cards, add placeholder for annotation creation textarea, adjust padding on tags.

--- a/h/static/styles/common.scss
+++ b/h/static/styles/common.scss
@@ -744,7 +744,10 @@ pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; }
 
   &[readonly] {
     .tagit-new, .tagit-close { display: none; }
-    li { padding-right: .3em; }
+    li { 
+      padding: 1px 6px; 
+      font-size: 11px; 
+    }
     li.tagit-choice { margin-top: .1em; }
   }
 }
